<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    tools:context=".Fragment.TimeLineFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_home"
            app:navigationIconTint="@color/main_orange"
            app:titleTextAppearance="@style/Toolbar.TitleText"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_entire_ver_left"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_entire_ver_right"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/gl_entire_ver_right"
            app:layout_constraintStart_toStartOf="@+id/gl_entire_ver_left"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                android:id="@+id/tv_current_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/seoulnamsan_b"
                android:gravity="center_vertical"
                android:text="@string/basic_zero"
                android:textColor="@color/main_orange"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_current_year_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/seoulnamsan_b"
                android:gravity="center_vertical"
                android:text="@string/year"
                android:textColor="@color/main_orange"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_current_year"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/blank_view"
                android:layout_width="6dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_current_year_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_current_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/seoulnamsan_b"
                android:gravity="center_vertical|end"
                android:text="@string/basic_zero"
                android:textColor="@color/main_orange"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/blank_view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_current_month_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/seoulnamsan_b"
                android:gravity="center_vertical"
                android:text="@string/month"
                android:textColor="@color/main_orange"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_current_month"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

<!--        <androidx.constraintlayout.widget.Guideline-->
<!--            android:id="@+id/gl_date_hor_bottom"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="1dp"-->
<!--            android:orientation="horizontal"-->
<!--            app:layout_constraintGuide_begin="70dp" />-->

<!--        <androidx.constraintlayout.widget.Guideline-->
<!--            android:id="@+id/gl_date_week_of_the_day_top"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="1dp"-->
<!--            android:orientation="horizontal"-->
<!--            app:layout_constraintGuide_percent="0.12" />-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/gl_entire_ver_right"
            app:layout_constraintStart_toStartOf="@+id/gl_entire_ver_left"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Sun"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Mon"
                app:layout_constraintEnd_toStartOf="@+id/textView7"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Tue"
                app:layout_constraintEnd_toStartOf="@+id/textView8"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Wed"
                app:layout_constraintEnd_toStartOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Thu"
                app:layout_constraintEnd_toStartOf="@+id/textView10"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Fri"
                app:layout_constraintEnd_toStartOf="@+id/textView11"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Sat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:layout_constraintEnd_toStartOf="@+id/gl_entire_ver_right"
            app:layout_constraintStart_toStartOf="@+id/gl_entire_ver_left"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_loading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/rv_calendar"
            app:layout_constraintEnd_toStartOf="@+id/gl_entire_ver_right"
            app:layout_constraintStart_toStartOf="@+id/gl_entire_ver_left"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_shimmer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/gl_entire_ver_right"
            app:layout_constraintStart_toStartOf="@+id/gl_entire_ver_left"
            app:layout_constraintTop_toBottomOf="@+id/rv_calendar">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:iconTint="@color/main_orange"
                style="@style/Widget.Material3.Button.IconButton"
                app:icon="@drawable/baseline_navigate_before"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/gl_btn_middle"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_btn_middle"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                app:iconTint="@color/main_orange"
                style="@style/Widget.Material3.Button.IconButton"
                app:icon="@drawable/baseline_navigate_next"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/gl_btn_middle"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/gl_entire_ver_right"
            app:layout_constraintStart_toStartOf="@+id/gl_entire_ver_left"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_ready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/ready"
                app:chipIcon="@drawable/ic_round_square_status"
                app:chipIconTint="@color/ready_gray"
                app:chipStrokeWidth="0dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_ongoinig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/onGoing"
                app:chipIcon="@drawable/ic_round_square_status"
                app:chipIconTint="@color/onGoing_green"
                app:chipStrokeWidth="0dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/finish"
                app:chipIcon="@drawable/ic_round_square_status"
                app:chipIconTint="@color/finish_blue"
                app:chipStrokeWidth="0dp" />

        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_todo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:layout_constraintEnd_toStartOf="@+id/gl_entire_ver_right"
            app:layout_constraintStart_toStartOf="@+id/gl_entire_ver_left"
            app:layout_constraintTop_toBottomOf="@+id/cg_status" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_list_move"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_list_move"
            app:iconTint="@color/main_orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_entire_ver_right"
            app:layout_constraintTop_toBottomOf="@+id/rv_todo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/white"
            app:backgroundTint="@color/main_orange"
            app:icon="@drawable/baseline_add"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toStartOf="@+id/gl_entire_ver_right"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>