<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_category"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/cardBackground"
    android:orientation="vertical"
    app:cardCornerRadius="15dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:iconTint="@color/black"
            android:gravity="center"
            app:icon="@drawable/baseline_arrow_down"
            app:iconGravity="textTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_entire_ver_left"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_entire_ver_right"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextCategoryName_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/gl_entire_ver_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gl_entire_ver_left"
            app:layout_constraintTop_toBottomOf="@+id/btn_close">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCategoryName"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/main_orange"
                android:hint="@string/typing_category"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHighlight="@color/main_orange"
                android:textCursorDrawable="@drawable/cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_del"
            android:layout_marginTop="20dp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/main_orange"
            android:text="@string/delete"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btn_edit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gl_entire_ver_left"
            app:layout_constraintTop_toBottomOf="@+id/editTextCategoryName_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/main_orange"
            android:text="@string/edit"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_entire_ver_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_del"
            app:layout_constraintTop_toTopOf="@+id/btn_del" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_edit" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>